finished formatting the page and making the images correctly styled. improved font size and spacing within the Dogs component.

--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,24 @@
-
-/* 
-* {
-  box-sizing: border-box; 
-  } */
-
 nav { 
   display: flex;
   padding: 30px 30px;
   margin: 10px;
-  background-color: lightblue;
+  background-color: lavender;
   font-family:'Courier New', Courier, monospace;
+  font-size: x-large;
   flex-direction: row;
   justify-content: space-around; 
-  font-size: 100;
   font-style: arial;
-  color: #FFFFFF;
+  font-weight: bolder;
+  color: black;
   align-content: center;
+  border-radius: 20px;
 } 
 
 
-
-.body {background-color: #fffff;
+.body {background-color: #FFFFFF;
   margin: 0px;
   display: flex; 
-  grid-template-columns: 1fr 200px;
+  grid-template-columns: 2fr 100px;
   grid-template-rows: 60px 1fr 70px;
   /* grid-gap: 5px; */
     /* height: 100vh; */
@@ -41,34 +36,40 @@ nav {
   flex-basis: 80%;
   flex: 1;
   text-align: center;
-  color: #121293;
-  /* display: grid;
-grid-template-columns: 30% 30% 30%;
-  grid-area: 5/10/15; 
-  /* grid-template-rows: 20% 20% 20% 20% 20%; */
+  color: black;
   margin: 1px;
-  justify-content: space-around;
-  /* align-items: flex-start; */
+  /* justify-content: space-around; */
   background-color: #FFFFFF;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
+    /* display: grid;
+     /* align-items: flex-start; */
+/* grid-template-columns: 30% 30% 30%;
+  grid-area: 5/10/15;  */
+  /* grid-template-rows: 20% 20% 20% 20% 20%; */
 }
 
 .side-bar  
-{ border-right: 200px solid #FFFFFF;
-  color: #121293;
+{ border-right: 200px solid lightblue;
+  color: black;
   width: 0px;
   background: center;
-  text-align: center;
-  padding: 50px;
+  text-align: left;
+  font-size: large;
+  padding: 0px;
+  border-radius: 20px;
+  opacity: 100%;
+  font-family:'Courier New', Courier;
 }
 
 .dog-info {
   border: 4px solid #333333;
   box-shadow: 1px 1px 5px #969696;
-  width: 70%;
+  width: 80%;
+  height: 10%;
   /* height: 500px; */
   margin: 1.5em auto;
-  /* margin: 20px; */
-  padding: 20px;
+  padding: 50px;
   border-radius: 20px;
   background-color: lightgrey;
   text-align: center;
@@ -77,22 +78,26 @@ grid-template-columns: 30% 30% 30%;
 
 .img {
   display: block;
-  max-width: 100px;
-  max-height: 100px;
-  /* height: 50%; */
+  /* max-width: 100px; */
+  /* max-height: 100px; */
+  max-height: 50%;
+  max-width: 10%;
+  margin: 50px;
   padding: 100px;
+  border-radius: 20px;
   /* margin-left: auto; */
   /* margin-right: auto; */
-  margin: 30px;
 }
 
  .rating {
-  background-color: #00000066;
-  color: #fefbf2;
-  width: 50%;
+  background-color: lavender;
+  color: black;
+  align-items: center;
   padding: 5px;
-  margin: 230px;
-  justify-content: space-around; 
+  margin: 30px;
+  display: flexbox;
+  font-size: large;
+  border-radius: 20px;
+  justify-content: space-evenly;
   align-content: center;
-  display: flex;
 } 
